# deeproxy

./: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build_on_push.yaml  build_test.yaml
src/: App.tsx  global.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  macos.rs  main.rs  proxy.rs  tray.rs
src/lib/: menu.ts  utils.ts
